# malbolge

./: Cargo.toml  README.md
mbi/: Cargo.toml  README.md
mbi/examples/: README.md  hello.mal  test.mb
mbi/src/: main.rs
src/: lib.rs  util.rs  vm.rs
