[package]
name = "mbi"
description = "A safe Malbolge interpreter written in Rust."
version = "1.0.1"
authors = ["return"]
keywords = ["malbolge", "interpreter", "esoteric", "vm"]
categories = ["parser-implementations", "parsing", "emulators", "cryptography" ]
edition = "2018"
readme = "README.md"
license = "GPL-3.0"

documentation = "https://docs.rs/mbi"
repository = "https://github.com/return/malbolge/blob/master/mbi/"

[dependencies]

clap = "~2.27.0"
malbolge = "^1.0.1"